--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,13 @@ body{
     border-radius: 20px;
     box-shadow: 10px 10px black;
 }
+.category{
+    background-color: #F4D04E;
+    padding: 12px 4px;
+    width: 25%;
+    text-align: center;
+    border-radius: 5px;
+}
 
 img{
     border-radius: 10px;
@@ -20,4 +27,8 @@ img{
 h2:hover{
     color: #F4D04E;
     cursor: pointer;
+}
+
+.author{
+    display: inline-flex;
 }
