--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@500;800&display=swap');
+
 body{
     background-color: hsl(47, 88%, 63%);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50%;
+    font-family: 'Figtree', sans-serif;
+    font-size: 16px;
+    min-height: 100vh;
 }
 
 .card{
     background-color: hsl(0, 0%, 100%);
+    max-width: 320px;
     padding: 24px;
     border-radius: 20px;
     box-shadow: 10px 10px black;
@@ -21,6 +26,8 @@ body{
 }
 
 img{
+    max-width: 100%;
+    height: auto;
     border-radius: 10px;
 }
 
@@ -29,6 +36,59 @@ h2:hover{
     cursor: pointer;
 }
 
-.author{
-    display: inline-flex;
+.publish-date{
+    margin-top: 12px;
+    margin-bottom: 12px;
+    color: hsl(0, 0%, 42%);
 }
+
+.title{
+    margin-top: 16px;
+    margin-bottom: 12px;
+}
+
+h2.title{
+    font-weight: 800;
+    white-space: nowrap;
+}
+
+.author {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.author img {
+    width: 32px;
+    height: 32px;
+    margin-right: 10px;
+}
+
+.description{
+    color: hsl(0, 0%, 42%);
+    line-height: 1.5;
+    margin-bottom: 16px;
+}
+
+.card > img {
+    margin-bottom: 16px;
+}
+
+.card-content {
+    margin-bottom: 16px;
+}
+
+@media (min-width: 1440px) {
+    .card {
+      max-width: 280px; 
+      padding: 32px;
+    }
+  }
+  
+
+  @media (max-width: 374px) {
+    .card {
+      max-width: 300px;
+      padding: 20px;
+    }
+  }
